Data Duplication of Objects removed with increment in thier Quantity

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="input-group  input-group-search mx-2 border border-dark rounded">
-                <input type="text" class="form-control" size="89" placeholder="Find Cars , Mobile Phones and more ..."
+                <input type="text" class="form-control" size="85" placeholder="Find Cars , Mobile Phones and more ..."
                     aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                     <span class="input-group-text bg-dark text-white border-0" id="basic-addon2">
@@ -53,12 +53,64 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item d-flex justify-content-center">
-                    <button class="btn font-weight-bold my-2 mx-3">Login</button>
+                    <button class="btn font-weight-bold my-2">Login</button>
                 </li>
+
                 <li class="nav-item d-flex justify-content-center">
-                    <button class="btn bg-white font-weight-bold rounded-pill px-4 py-2"
+                    <button class="btn font-weight-bold my-2 mr-1">
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        <span class="badge badge-dark" style="position: relative;top: -10px;font-size:x-small">0</span>
+                    </button>
+                </li>
+
+                <li class="nav-item d-flex justify-content-center">
+                    <button data-toggle="modal" data-target="#exampleModal"
+                        class="btn bg-white font-weight-bold rounded-pill px-4 py-2"
                         style="border-top-color: #72e6dc;border-left-color: #f5ce30;border-right-color: #4077ff;border-bottom-color: #4077ff;border-width: 0.35em;">+
                         Sell</button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog p-5">
+                            <div class="modal-content">
+                                <div class="modal-header border-0">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div>
+                                        <img class="mx-auto d-block" width="100"
+                                            src="https://www.olx.com.pk/assets/iconProfilePicture.7975761176487dc62e25536d9a36a61d.png"
+                                            alt="">
+
+                                        <h6 class="text-center mt-3 mb-4">Save all your favorite items in one place</h6>
+                                        <button type="button"
+                                            class="btn btn-outline-dark border-dark py-2 btn-block font-weight-bold">Continue
+                                            with phone</button>
+                                        <button type="button"
+                                            class="btn btn-outline-dark border-dark py-2 btn-block font-weight-bold"> <i
+                                                class="fa fa-facebook-official mr-2"></i>Continue with Facebook</button>
+                                        <button type="button"
+                                            class="btn btn-outline-dark border-dark py-2 btn-block font-weight-bold"> <i
+                                                class="fa fa-google mr-2"></i> Continue with Google</button>
+                                        <button type="button"
+                                            class="btn btn-outline-dark border-dark py-2 btn-block font-weight-bold">Continue
+                                            with phone</button>
+                                        <h6 class="text-center mt-3">We won't share your personal details with anyone.
+                                        </h6>
+                                        <p class="text-muted text-center" style="font-size: smaller;">If you continue,
+                                            you are accepting <a
+                                                href="https://help.olx.com.pk/hc/en-us/categories/360000044302-Legal-Privacy-information">Terms
+                                                and Conditions and Privacy Policy</a></p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
                 </li>
             </ul>
         </div>
@@ -211,7 +263,7 @@
 
                     </div>
                 </div>
-            </div>             
+            </div>
         </div>
     </div>
 
