--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="nav-item d-flex justify-content-center">
                     <button class="btn font-weight-bold my-2 mr-1">
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                        <span class="badge badge-dark" style="position: relative;top: -10px;font-size:x-small">0</span>
+                        <span class="badge badge-dark">0</span>
                     </button>
                 </li>
 
