--- a/index.html
+++ b/index.html
@@ -31,27 +31,49 @@
                         <i class="fa fa-search"></i>
                     </label>
                 </div>
-                <select class="custom-select border-0" id="City">
-                    <option selected>Choose current city</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
+                <input list="cities" name="city" id="city" class="form-control border-0"
+                    placeholder="Select your city...">
+                <datalist id="cities">
+                    <option value="Islamabad"></option>
+                    <option value="Karachi"></option>
+                    <option value="Lahore"></option>
+                </datalist>
             </div>
 
             <div class="input-group  input-group-search mx-2 border border-dark rounded">
-                <input type="text" class="form-control" size="85" placeholder="Find Cars , Mobile Phones and more ..."
-                    aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input list="items" name="item" id="item" class="form-control" size="83"
+                    placeholder="Find Cars , Mobile Phones and more ...">
+                <datalist id="items">
+                    <option value="Three ways to learn html"></option>
+                    <option value="css"></option>
+                    <option value="javascript"></option>
+                </datalist>
+
                 <div class="input-group-append">
-                    <span class="input-group-text bg-dark text-white border-0" id="basic-addon2">
-                        <i class="fa fa-search"></i>
-                    </span>
+                    <button class="input-group-text bg-dark text-white border-0" onclick="gotoProduct()"><i
+                            class="fa fa-search"></i>
+                    </button>
                 </div>
             </div>
         </div>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
+
+                <!-- <li class="nav-item input-group">
+                    <input list="items" name="item" id="item" class="form-select border-end-0"
+                        placeholder="Type to search..">
+                    <datalist id="items">
+                        <option value="Three ways to learn html"></option>
+                        <option value="css"></option>
+                        <option value="javascript"></option>
+                    </datalist>
+                    <button class="input-group-text bg-white border-start-0" onclick="gotoProduct()"><i
+                            class="fa fa-search"></i></button>
+                </li> -->
+
+
+
                 <li class="nav-item d-flex justify-content-center">
                     <button class="btn font-weight-bold my-2">Login</button>
                 </li>
@@ -301,12 +323,6 @@
     </div>
 
 
-
-
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -314,5 +330,6 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 </body>
+<script src="app.js"></script>
 
 </html>
